style: fix overflow on layout popup

--- a/fairy_admin/static/admin/css/admin.less
+++ b/fairy_admin/static/admin/css/admin.less
@@ -224,3 +224,9 @@ form.icon {
         line-height: 38px;
     }
 }
+
+.layui-layer-page {
+    .layui-layer-content {
+        overflow: visible !important;
+    }
+}
